crawler-service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "crawler-service"
  namespace: "crawler"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080
  selector:
    app: "synergychat-crawler"
